After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 781106 - JS LOG: Failed to add search provider /usr/share/gnome-shell/search-providers/org.gnome.bijiben-search-provider.ini: TypeError: appInfo is null
JS LOG: Failed to add search provider /usr/share/gnome-shell/search-providers...
Status: RESOLVED FIXED
Product: bijiben
Classification: Applications
Component: general
3.20.x
Other Linux
: Normal normal
: ---
Assigned To: Bijiben maintainer(s)
Bijiben maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2017-04-09 22:41 UTC by Laurent Bigonville
Modified: 2017-04-24 07:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch against 3.20 (2.10 KB, patch)
2017-04-09 23:07 UTC, Laurent Bigonville
none Details | Review
Rename remaining references of bijiben.desktop to org.gnome.bijiben.desktop (3.04 KB, patch)
2017-04-09 23:24 UTC, Laurent Bigonville
committed Details | Review

Description Laurent Bigonville 2017-04-09 22:41:02 UTC
Hi,

gnome-shell is complaining with the following message:

JS LOG: Failed to add search provider /usr/share/gnome-shell/search-providers/org.gnome.bijiben-search-provider.ini: TypeError: appInfo is null

In the org.gnome.bijiben-search-provider.ini file I can see:

DesktopId=bijiben.desktop

but there is not bijiben.desktop installed, the only desktop file shipped by bijiben is org.gnome.bijiben.desktop

Shouldn't the value of bijiben.desktop be changed to org.gnome.bijiben.desktop?

I also see a reference to bijiben.desktop in src/libbiji/biji-zeitgeist.c that one should probably be changed too
Comment 1 Laurent Bigonville 2017-04-09 23:07:38 UTC
Created attachment 349574 [details] [review]
Patch against 3.20
Comment 2 Laurent Bigonville 2017-04-09 23:24:23 UTC
Created attachment 349575 [details] [review]
Rename remaining references of bijiben.desktop to org.gnome.bijiben.desktop

This fixes the search provider and zeitgeist integration
Comment 3 Jonathan Kang 2017-04-24 07:20:39 UTC
Comment on attachment 349575 [details] [review]
Rename remaining references of bijiben.desktop to org.gnome.bijiben.desktop

Rebased and pushed to master as commit 3ecf0c421564ab13064cf34a8272ca14da671a05.

Thanks.