Fix wrong references to bijiben desktop file

Currently, some references to desktop file are written as
"bijiben.desktop". While the desktop file in this project is named as
"org.gnome.bijiben.desktop".

Fix that by changing these references in the search provider and
zeitgeist part.

https://bugzilla.gnome.org/show_bug.cgi?id=781106